# ScoliumModel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
Scholium/: Dockerfile  README.md  main.py  project.yml  pyproject.toml  requirements.txt  server.py  vercel.json
Scholium/ScholiumModel/: chat.py  chat_history.py  citation_handler.py  model.py  model_chat  server.py
Scholium/api/: citation_handler.py  common_utils.py  model.py  model_chat.py  model_tests.py  model_utils.py  openalex.py  openalex_model.py  pinecone_vectorstore.py  preprocessing.py  server.py  text_splitter.py  vectorstore_tests.py
ScholiumModel/: chat_history.py  citation_handler.py  citation_model.py  citations.py  indexer.py  indexer_test.py  model.py  rag.py  server.py  test.py
ScholiumModel/sample_data/: index_data.py
ScoliumModel/: indexer.py  rag.py
pamphlets/: package-lock.json  package.json
pamphlets/app/: globals.css  page.tsx
pamphlets/components/: pamphlets.ts
scholiumapp/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
scholiumapp/app/: globals.css  layout.js  main.tsx  page.js
scholiumapp/components/: home.tsx  markdown-display.tsx  research-home.tsx  results.tsx
scholiumapp/components/ui/: copy-button.tsx  home_button.tsx  loading-state.tsx  select-style.css  select.tsx
scholiumapp/lib/: agent-state.tsx  chat-context.tsx  citation-context.tsx  citation-styles.tsx  metadata-citations.tsx
tests/: test_common_utils.py  text_splitter_ tests.py  text_splitter_tests.py
(+1 files in other folders)
