[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "api"
version = "0.1.0"
description = "Your personal research assistant."
python_requires = "3.12.0"
authors = [
    { name="Sunny Wan", email="Sunnywan2020@gmail.com" }
]
readme = "README.md"
dependencies = [
    "langgraph==0.2.66",
    "langchain-community==0.3.15",
    "langchain-pinecone==0.2.2",
    "langgraph-checkpoint==2.0.10",
    "pinecone==5.4.2",
    "python-dotenv==1.0.1",
    "langchain-openai==0.2.9",
    "fastapi[standard]==0.115.0",
    "pydantic>=2.7.0,<3.0.0",
    "uvicorn==0.34.0",
    "copilotkit==0.1.34"
]

